# apex-oracle

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  RESULTS.md  blueprint.md  notes.md  pyproject.toml  render.yaml  task_plan.md  vercel.json
.claude/: launch.json
.claude/logs/: session-20260624-04a4fd91.md  session-20260624-3530ef21.md  session-20260624-d0464c80.md  session-20260625-3530ef21.md  session-20260625-81791f99.md
.github/workflows/: ci.yml
app/: dashboard.py  pipeline.py  verify_demo.py
app/inspector/: README.md  index.html
council/: council-report-20260624.html  council-transcript-20260624.md
data/: real_features.csv
deck/: APEX-ORACLE_ISRO_BAH2026.pptx  build_deck.py  fill_template.py
scripts/: benchmark.py  build_real_dataset.py  compare_models.py  cv_compare.py  fetch_toi_fp.py  make_results_figure.py  run_real.py  train_real_model.py
src/apex_oracle/: __init__.py  cli.py  config.py  data.py  evaluate.py  features.py  fitting.py  model.py  pipeline.py  preprocess.py  search.py  server.py  synthetic.py  utils.py  vetting.py
src/apex_oracle/models/: default.joblib
tests/: test_fitting.py  test_model_eval.py  test_pipeline.py  test_real_data.py  test_server.py
