[project]
name = "apex-oracle"
version = "0.1.0"
description = "APEX-ORACLE: explainable AI detection, classification and characterisation of exoplanet transits in noisy TESS light curves."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "APEX-ORACLE Team" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.7,<1.8",   # pinned: the bundled model is pickled with 1.7.x
    "joblib>=1.3",
]

[project.optional-dependencies]
astro = ["lightkurve>=2.4", "astropy>=5.3", "wotan>=1.10", "transitleastsquares>=1.0"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
apex-oracle = "apex_oracle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apex_oracle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["network: requires internet / MAST access (skipped when offline)"]

[tool.ruff]
line-length = 100
target-version = "py311"
